# go-grpc-bazel-example

./: .bazelrc  .gitignore  BUILD  CLAUDE.md  MODULE.bazel  Makefile  README.md  WORKSPACE  go.bzl  go.mod  go.sum
.cursor/: rules.md
.github/workflows/: coverage.yml  go.yml
ci/: build-fmt.sh  build-service.sh  coverage.sh  deploy.sh  link.sh  push-service.sh  status.sh  test.sh  unlink.sh
ci/services/: BUILD  helloworld.yaml
cmd/helloworld-client/: BUILD.bazel  main.go
pb/helloworld/: BUILD.bazel  helloworld.pb.go  helloworld.pb.gw.go  helloworld.proto  helloworld_grpc.pb.go
pkg/helloworld/server/: BUILD.bazel  server.go  server_test.go
services/helloworld/: BUILD.bazel  data.go  main.go
tools/: tools.go
