###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "go_grpc_bazel_example",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.5.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_google_genproto_googleapis_api",
    "com_github_grpc_ecosystem_grpc_gateway_v2",
    "com_github_philip_bui_grpc_zerolog",
    "org_golang_x_tools",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_oci", version = "1.7.4")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_proto_grpc_grpc_gateway", version = "5.1.0")
