load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_grpc_gateway//:defs.bzl", "gateway_grpc_library", "gateway_openapiv2_compile")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
    deps = ["@googleapis//google/api:annotations_proto"],
)

# This is used for packages that do not require gateway; like cmd/client
go_proto_library(
    name = "helloworld_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/esurdam/go-grpc-bazel-example/pb/helloworld",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto_googleapis_api//annotations"],
)

# This is used for packages that require gateway; like services/helloworld
gateway_grpc_library(
    name = "helloworld_gateway_proto",
    importpath = "github.com/esurdam/go-grpc-bazel-example/pb/helloworld",
    protos = [":helloworld_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

# This outputs a swagger.json file that can be served by the gateway
gateway_openapiv2_compile(
    name = "helloworld_openapi_swagger",
    protos = [":helloworld_proto"],
    visibility = ["//visibility:public"],
)
